Fixed Product Options tabs & added graphics to HTML
Fixed Options tabs for OrderItem and Product views
- Implemented OptionGroupsService to group options by type
Updated use of `define()` to be consistent
Added graphics to About and Home pages

--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -37,6 +37,15 @@ tr.narrow td {
     padding-bottom: 0px;
 }
 
+.about {
+    margin-top:-20px;
+    height: 1000px;
+    padding-top: 0px;
+    background: url(/assets/images/breezeBkgrnd.png);
+    background-repeat: repeat-x;
+    background-color: #f1f1f1;
+}
+
 .tab-pane {
     min-height: 6em;
 }
